--- a/toDo.txt
+++ b/toDo.txt
@@ -34,3 +34,13 @@ for main playing class:
 		PLAY->
 	playing menu
 		for waay later
+
+UPDATE 9/6 6:20 PM
+
+DONE:
+	Started main playing class for console game.
+TODO:
+	Actual start the interactive play part.
+ISSUES:
+	checking validity of the map's symbols doesn't work right now, so I disabled it, 	will fix later
+	the clearscreen \f symbol ain't work on console, but that doesn't really matter, and I don't want to implement some turrible hack to of like 20 newlines to clear the screen. It's fine, I won't need that once I move to Swing anyways.
